Update Products: thêm API lấy chi tiết và tìm kiếm món theo tên; Việt hóa message, status API
